# genocide

./: .readthedocs.yml  MANIFEST.in  MANUAL.rst  README.rst  genocide.service  ob.py  pyproject.toml  setup.py  shl.py
bmod/: cmd.py
bot/: __init__.py  cfg.py  cmd.py  irc.py  rss.py
botmod/: fnd.py  rss.py
cid/: dbs.py  dft.py  jsn.py  obj.py  sel.py  spc.py  wdr.py
cide/: __init__.py  bus.py  cbs.py  cfg.py  cls.py  clt.py  com.py  dbs.py  dft.py  evt.py  hdl.py  jsn.py  obj.py  sel.py  spc.py  thr.py  trc.py  utl.py  wdr.py
cin/: clean  docs  tinder  upenv
dev/: check  clean  env  lint  rep  rtfd  test  tinder  upenv  wipe  xmlrun
din/: all  clean  lint
docs/: about.rst  admin.rst  advocaten.rst  azyprexa.rst  chrono.rst  clozapine.rst  conf.py  correspondence.rst  evidence.rst  fact.rst  guilty.rst  index.rst  kamer.rst  kamerleden.rst  man.rst  manpage.rst  manual.rst  mobile.rst  otp.rst  otp1.rst  otp2.rst  otpcr11719.rst  overview.rst  pubchem.rst  reconsider.rst  request.rst  requirements.txt  source.rst  verbatim.rst  writings.rst
files/: genocide.1.md  genocide.service
fin/: all  build  clean  docs  env  files  lint  loop  mkenv  sed  tests  tinder  upenv  wipe
gcd/: all.py  all.py~  bsc.py  bus.py  cbs.py  cfg.py  clk.py  clt.py  cmd.py  cmds.py  cms.py  csl.py  dbs.py  ent.py  evt.py  exc.py  hdl.py  irc.py  itr.py  krn.py  nms.py  obj.py  opt.py  prs.py  que.py  rpt.py  rss.py  run.py  scn.py  sel.py  shl.py  sui.py  sys.py  tbl.py  thr.py  tmr.py  trm.py  usr.py  utl.py  ver.py
gcdmod/: hlp.py  sui.py
gcide/: bus.py  cbs.py  cfg.py  (+10 more)
(+384 files in other folders)
