[project]

name = "genocide"
description = "Reconsider OTP-CR-117/19"
version = "121"
authors = [
    {name = "Bart Thate", email = "bthate@dds.nl" },
]
classifiers=[
             'Development Status :: 3 - Alpha',
             'License :: Public Domain',
             'Operating System :: Unix',
             'Programming Language :: Python',
             'Topic :: Utilities'
            ]
readme = "README.rst"
license = { text="Public Domain"}

[project.urls]

"Homepage" = "https://pypi.org/project/genocide"
"Bug Reports" = "https://github.com/bthate/genocide/issues"
"Source" = "https://github.com/bthate/genocide"

[project.scripts]

genocide = "genocide.__main__:main"

[project.optional-dependencies]

dev = [
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]

"docs" = ["docs/*",]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
